k8s/overlays/talos-runtime/mega-sena/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mega-sena-service
  labels:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: mega-sena-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: geek-hub
    app.kubernetes.io/component: mega-sena-service
  ports:
    - name: http
      port: 3000
      targetPort: http
